examples/v1alpha2/http-redirect-rewrite/httproute-redirect-https.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: HTTPRoute
metadata:
  name: http-filter-redirect
spec:
  hostnames:
    - redirect.example
  rules:
    - filters:
      - type: RequestRedirect
        requestRedirect:
          scheme: https
          statusCode: 301
      backendRefs:
      - name: example-svc
        weight: 1
        port: 80
