examples/v1alpha2/http-redirect-rewrite/httproute-rewrite-path.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: HTTPRoute
metadata:
  name: http-filter-rewrite
spec:
  hostnames:
    - rewrite.example
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /cardamom
      filters:
      - type: URLRewrite
        urlRewrite:
          hostname: elsewhere.example
          path:
            type: ReplaceFullPath
            replaceFullPath: /fennel
      backendRefs:
      - name: example-svc
        weight: 1
        port: 80
